--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "3",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-meta": "^1.5.2",
+    "vue-moment": "^4.0.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
